<resources>
    <string name="app_name">CSC306</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="home_pag_fragment_label">Home Page Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="third_fragment_label">Third Fragment</string>
    <string name="bookmark_fragment_label">Bookmark Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="search_hint">Search items</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="image_of_robert_recorde">Image of Robert Recorde</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="create_account">Create Account</string>
    <string name="login_as_guest">Login as Guest</string>
    <string name="placeholder">Placeholder</string>
    <string name="item_details">Item Details</string>
    <string name="edit">edit</string>
    <string name="favourite">favourite</string>
    <string name="item_description_bookmark">item bookmarks</string>
    <string name="no_bookmarks">No Bookmarks</string>
    <string name="logout">Logout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="edit_item">Edit Item</string>
    <string name="choose_image">Choose Image</string>
    <string name="item_description">Item Description</string>
    <string name="delete_item">Delete Item</string>
    <string name="upload_info">Uploaded by %1$s on %2$s</string>
    <string name="create_blog_post">Create Blog Post</string>
    <string name="view_pending">Pending</string>
    <string name="add_item">Add Item</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="save_post">Save Post</string>
    <string name="item_name">Item Name</string>
    <string name="image_of_the_artefact">Image of the Artefact</string>
    <string name="_0">0%</string>
    <string name="uploading">Uploading…</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="bookmark_description">Bookmark Description</string>
    <string name="bookmark_title">Bookmark Title</string>
    <string name="bookmark_timestamp">Bookmark Timestamp</string>
    <string name="historical_object">Historical Object</string>
    <string name="blog_post_title">Blog Post Title</string>
    <string name="timestamp">Timestamp</string>
    <string name="blog_post_content">Blog Post Content</string>
    <string name="add_a_comment">Add a comment…</string>
    <string name="add_comment">Add Comment</string>
    <string name="author">Author</string>
    <string name="comment_text">Comment text</string>
    <string name="featured_item_image">Featured Item Image</string>
    <string name="add_artefact_button">Add Artefact Button</string>
    <string name="bookmarked_on">Bookmarked on: %1$s</string>
    <string name="not_logged_in">Not logged in</string>
    <string name="uploading_percentage">%1$d%%</string>
</resources>