<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/backgroundImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/image_of_robert_recorde"
        android:scaleType="centerCrop"
        android:src="@drawable/robertrecorde" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        app:cardBackgroundColor="#E6000000"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:hint="@string/username"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:textColor="@color/md_theme_dark_onBackground" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="16dp"
                android:hint="@string/password"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/md_theme_dark_onBackground" />

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/passwordEditText"
                android:layout_marginHorizontal="12dp"
                android:padding="16dp"
                android:text="@string/login"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/forgotPasswordTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/loginButton"
                    android:layout_alignParentEnd="true"
                    android:layout_weight="1"
                    android:padding="16dp"
                    android:text="@string/forgot_password"
                    android:textColor="@color/md_theme_dark_onBackground"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/createAccountTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/loginButton"
                    android:layout_alignParentStart="true"
                    android:padding="16dp"
                    android:text="@string/create_account"
                    android:textColor="@color/md_theme_dark_onBackground"
                    android:textSize="16sp" />

            </LinearLayout>

            <Button
                android:id="@+id/guestLoginButton"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/forgotPasswordTextView"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginBottom="12dp"
                android:padding="16dp"
                android:text="@string/login_as_guest"
                android:textSize="16sp" />
        </LinearLayout>


    </androidx.cardview.widget.CardView>


</RelativeLayout>